--- a/weather/package.json
+++ b/weather/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "precommit": "lint-staged",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -19,9 +20,11 @@
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^6.4.7",
+    "@angular/material-moment-adapter": "^6.4.7",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "bootstrap": "^4.1.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "moment": "^2.22.2",
@@ -37,7 +40,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "~4.4.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^3.1.4",
@@ -47,8 +50,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.1",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "angular-tslint-rules": "^1.5.0",
+    "tslint": "~5.11.0",
+    "angular-tslint-rules": "1.5.0",
     "husky": "^1.1.3",
     "lint-staged": "^8.0.4",
     "prettier": "^1.15.1",
